tests/ui/frontmatter/infostring-dot-leading.rs
---.toml
//~^ ERROR: invalid infostring for frontmatter
---

// infostrings cannot have leading dots

fn main() {}
